--- a/app/src/main/res/layout/single_movie_slider.xml
+++ b/app/src/main/res/layout/single_movie_slider.xml
@@ -97,6 +97,53 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+
+            <TextView
+                android:id="@+id/genre1_movie_slider"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:fontFamily="@font/aldrich"
+                android:maxLines="2"
+                android:text="Action"
+                android:textColor="@color/textAd"
+                android:textSize="12sp" />
+
+            <LinearLayout
+                android:visibility="invisible"
+                android:id="@+id/genre2Layout_movie_slider"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+               >
+                <LinearLayout
+                    android:layout_gravity="center"
+                    android:layout_width="5dp"
+                    android:layout_height="5dp"
+                    android:background="@drawable/circle_bg"
+                    />
+                <TextView
+                    android:layout_marginStart="5dp"
+                    android:id="@+id/genre2_movie_slider"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/aldrich"
+                    android:maxLines="2"
+                    android:text="Family"
+                    android:textColor="@color/textAd"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
