--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -19,15 +19,29 @@
         app:sliderAutoCycleDirection="back_and_forth"
         app:sliderAutoCycleEnabled="true"
         app:sliderIndicatorAnimationDuration="600"
-        app:sliderIndicatorGravity="end|center_vertical"
+        app:sliderIndicatorGravity="bottom|center_horizontal"
         app:sliderIndicatorMargin="15dp"
-        app:sliderIndicatorOrientation="vertical"
+        app:sliderIndicatorOrientation="horizontal"
         app:sliderIndicatorPadding="3dp"
         app:sliderIndicatorRadius="1dp"
         app:sliderIndicatorSelectedColor="@color/primary"
         app:sliderIndicatorUnselectedColor="#FFF"
         app:sliderScrollTimeInSec="4"
         app:sliderStartAutoCycle="true" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView_movieFragment"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/progress"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
