--- a/app/src/main/res/layout/single_movie.xml
+++ b/app/src/main/res/layout/single_movie.xml
@@ -59,7 +59,7 @@
                 android:id="@+id/date_single_movie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:fontFamily="@font/aldrich"
                 android:maxLines="2"
                 android:text="21/08/2022"
