--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,15 +3,15 @@
 
     <item
         android:id="@+id/homeMenu"
-        android:title="Home"
+        android:title="@string/home"
         android:icon="@drawable/ic_home"/>
     <item
         android:id="@+id/searchMenu"
-        android:title="Favorites"
+        android:title="@string/search"
         android:icon="@drawable/ic_search"/>
     <item
         android:id="@+id/profileMenu"
-        android:title="Profile"
+        android:title="@string/profile"
         android:icon="@drawable/ic_user"/>
 
 </menu>
