--- a/app/src/main/res/layout/single_movie_slider.xml
+++ b/app/src/main/res/layout/single_movie_slider.xml
@@ -34,6 +34,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
+            android:id="@+id/titleBig_single_movie_slider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
