--- a/app/src/main/res/drawable/bottom_nav_bg.xml
+++ b/app/src/main/res/drawable/bottom_nav_bg.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:startColor="@color/backGroundAd" android:endColor="#001F2123"
+    <gradient android:startColor="@color/backGroundAd"
+        android:endColor="#301F2123"
         android:angle="90"
         />
 
