--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -180,6 +180,8 @@
 
 
         <LinearLayout
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -217,14 +219,23 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
 
-                <ImageView
+                <ProgressBar
+                    android:id="@+id/progress_bar_MovieDetails"
+                    style="@style/CircularDeterminateProgressBar"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:progress="60" />
+
                 <TextView
+                    android:id="@+id/popularity_movieDetails"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/primary"
+                    android:text="Popularity"
                     android:fontFamily="@font/aldrich"
                     android:textSize="15sp"/>
 
@@ -240,10 +251,12 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:src="@drawable/ic_save"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Watchlist"
                     android:textColor="@color/primary"
                     android:fontFamily="@font/aldrich"
                     android:textSize="15sp"/>
