movie details activity update

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -102,7 +102,7 @@
                     android:id="@+id/date_single_movie_Details"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:fontFamily="@font/aldrich"
                     android:maxLines="2"
                     android:text="21/08/2022"
@@ -182,6 +182,7 @@
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -228,7 +229,8 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:progress="60" />
+                    tools:progress="60"
+                    />
 
                 <TextView
                     android:id="@+id/popularity_movieDetails"
@@ -269,7 +271,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
@@ -296,10 +298,9 @@
                 android:layout_height="wrap_content"
                 android:maxLines="8"
                 android:text="overview"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 android:textColor="@color/textAd"
                 android:fontFamily="@font/aldrich"
-                android:textStyle="italic"
                 />
 
         </LinearLayout>
