--- a/app/src/main/res/layout/cast_or_crew_single.xml
+++ b/app/src/main/res/layout/cast_or_crew_single.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -10,22 +10,18 @@
     android:background="@color/backGround"
     >
 
-    <androidx.cardview.widget.CardView
-        app:cardCornerRadius="100dp"
-        app:cardElevation="0dp"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_margin="5dp"
-        >
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_gravity="center"
             android:id="@+id/profile_cast_single"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/poster_bg"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="5dp"
+            app:civ_border_width="0dp"
+            android:src="@drawable/poster"
             android:scaleType="centerCrop"
             />
-    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:id="@+id/title_cast_single"
@@ -35,7 +31,7 @@
         android:fontFamily="@font/aldrich"
         android:textSize="13sp"
         android:textColor="@color/primary"
-        android:maxLines="2"
+        android:maxLines="1"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:gravity="center"/>
@@ -50,7 +46,7 @@
         android:fontFamily="@font/aldrich"
         android:textSize="11sp"
         android:textColor="@color/textAd"
-        android:maxLines="2"
+        android:maxLines="1"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:gravity="center"/>
