trailer Api update

--- a/app/src/main/res/layout/activity_youtube_video_player.xml
+++ b/app/src/main/res/layout/activity_youtube_video_player.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         app:showVideoCurrentTime="true"
         app:showFullScreenButton="true"
+        android:drawingCacheQuality="high"
         app:showSeekBar="true"
         app:showVideoDuration="true"
         app:showYouTubeButton="false"
