--- a/app/src/main/res/layout/activity_see_all_movie.xml
+++ b/app/src/main/res/layout/activity_see_all_movie.xml
@@ -24,6 +24,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <TextView
+                android:id="@+id/textTitle_seeAllMovies"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_collapseMode="parallax"
